[gd_scene load_steps=7 format=3 uid="uid://bkt0daxsrm57p"]

[ext_resource type="Script" path="res://Scripts/Pickup_Controller.gd" id="1_e5mxi"]
[ext_resource type="Texture2D" uid="uid://du46f4jbeayfo" path="res://Assets/Sprites/Objects.png" id="1_mv78h"]
[ext_resource type="AudioStream" uid="uid://dsycufcvvtfxx" path="res://Assets/Music/beep.mp3" id="3_kff6s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k4pey"]
radius = 7.0

[sub_resource type="AtlasTexture" id="AtlasTexture_skfy1"]
atlas = ExtResource("1_mv78h")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_fe0bc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_skfy1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="McGuffin" type="Node2D"]
z_index = 3
z_as_relative = false
script = ExtResource("1_e5mxi")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_k4pey")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fe0bc")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kff6s")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
